fix: correct image href redirect and mobile card layout issue

--- a/assets/css/cursos/cursos-card.css
+++ b/assets/css/cursos/cursos-card.css
@@ -10,6 +10,12 @@
     padding: 30px;
 }
 
+.cursos__card div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .cursos__card:hover {
     background: linear-gradient(to right, #161b29, #2f364e);
     box-shadow: 1px 1px 10px 3px #00000072;
